2008-12-08  Stephane Delcroix  <sdelcroix@novell.com>

	* gio/metadata: change Seekable.Tell() to Position.
	* gio/StreamWrapper.cs: a wrapper for GLib.[Input|Output]Streams to
	System.IO.Stream.

2008-12-08  Stephane Delcroix  <sdelcroix@novell.com>

	* gio/metadata: change Seekable.CanSeek from a method to a property 
	accessor.

2008-10-27  Stephane Delcroix  <sdelcroix@novell.com>

	* configure.in: bump the dependency on glib-sharp to 2.12.6, for the
	ListBase fix.

2008-10-27  Stephane Delcroix  <sdelcroix@novell.com>

	* sample/TestAppInfo.cs: test app for AppInfo.

2008-10-24  Stephane Delcroix  <sdelcroix@novell.com>

	* gio/metadata: AppInfo.GetAllForType () returns a AppInfo[] instead
	of a GList.

2008-05-14  Stephane Delcroix  <sdelcroix@novell.com>

	* gio/metadata:
	* gio/File.custom:
	* gio/FileAdapter.custom: change the signature of File.Uri to be
	a System.Uri instead of string.

2008-05-13  Stephane Delcroix  <sdelcroix@novell.com>

	* gio/File.custom:
	* gio/FileAdapter.custom: adding am argumentless Delete method

2008-05-09  Stephane Delcroix  <sdelcroix@novell.com>

	* gio/File.custom: adding the property to the interface too.

2008-05-09  Stephane Delcroix  <sdelcroix@novell.com>

	* gio/FileAdapter.custom: adding an Exists property.

2008-05-09  Stephane Delcroix  <sdelcroix@novell.com>

	* gio/FileAdapter.custom: add a ToString override.

2008-05-03  Andreia Gaita <avidigal@novell.com> 

	* gio/FileEnumerator.custom: Fix return statement

2008-04-02  Stephane Delcroix  <sdelcroix@novell.com>

	* gio/metadata:
	* gio/FileEnumerator.custom: implements IEnumerable

2008-04-02  Stephane Delcroix  <sdelcroix@novell.com>

	* configure.in:
	* Makefile.am: 
	* sample:
	* sample/TestInfo.cs:
	* sample/Makefile.am: a working sample.

2008-04-02  Stephane Delcroix  <sdelcroix@novell.com>

	* gio/Makefile.am:
	* gio/FileFactory.cs: static class mapping the get_file_for_* File
	instanciators.

2008-03-31  Stephane Delcroix  <sdelcroix@novell.com>
